--- a/Practice Gemini - calculator.html
+++ b/Practice Gemini - calculator.html
@@ -70,7 +70,7 @@
     <input type="button" value="calculate" id="calculateBtn">
     <p>= <span id="result"></span></p> -->
 
-    <h2>arithmetic</h2>
+    <h2>簡易計算機</h2>
     <div class="calculator">
         <input type="number" id="number1" placeholder="輸入數字">
         <input type="number" id="number2" placeholder="輸入數字">
